--- a/assets/template.html
+++ b/assets/template.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>=title=</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     =styles=
   </head>
   <body>
